<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Fragments.RegisterFragment">

    <ScrollView
        android:id="@+id/scrollViewFragmentRegister"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewFragmentRegister"
                style="@style/D_OrphanTextView.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/registerHeader"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2FragmentRegister"
                style="@style/D_OrphanTextView.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registerDescription"
                android:textColor="@color/grey500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewFragmentRegister" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewFragmentRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="50dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp"
                app:cardPreventCornerOverlap="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2FragmentRegister">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutNameFragmentRegister"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        app:boxStrokeColor="@drawable/selector_states_textinputlayout"
                        app:boxStrokeWidth="2dp"
                        app:boxStrokeWidthFocused="3dp"
                        app:hintTextColor="@drawable/selector_states_textinputlayout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/D_OrphanTextView.Body"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/nameTextInputLayout"
                            android:inputType="text"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutEmailFragmentRegister"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        app:boxStrokeColor="@drawable/selector_states_textinputlayout"
                        app:boxStrokeWidth="2dp"
                        app:boxStrokeWidthFocused="3dp"
                        app:hintTextColor="@drawable/selector_states_textinputlayout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNameFragmentRegister">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/D_OrphanTextView.Body"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/emailTextInputLayout"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutPasswordFragmentRegister"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        app:boxStrokeColor="@drawable/selector_states_textinputlayout"
                        app:boxStrokeWidth="2dp"
                        app:boxStrokeWidthFocused="3dp"
                        app:hintTextColor="@drawable/selector_states_textinputlayout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmailFragmentRegister"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/blue500">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/D_OrphanTextView.Body"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/passwordTextInputLayout"
                            android:inputType="textPassword"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutPasswordConfirmationFragmentRegister"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        app:boxStrokeColor="@drawable/selector_states_textinputlayout"
                        app:boxStrokeWidth="2dp"
                        app:boxStrokeWidthFocused="3dp"
                        app:hintTextColor="@drawable/selector_states_textinputlayout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPasswordFragmentRegister"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/blue500">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/D_OrphanTextView.Body"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/passwordConfirmationTextInputLayout"
                            android:inputType="textPassword"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textView3FragmentRegister"
                        style="@style/D_OrphanTextView.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/radioGroupDescriptionRegister"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="@+id/radioGroupUserTypeFragmentRegister"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPasswordConfirmationFragmentRegister" />

                    <RadioGroup
                        android:id="@+id/radioGroupUserTypeFragmentRegister"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3FragmentRegister">

                        <RadioButton
                            android:id="@+id/radioButtonUserTypeOrphanageFragmentRegister"
                            style="@style/D_OrphanTextView.Label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/orphanage" />

                        <RadioButton
                            android:id="@+id/radioButtonUserTypeTutorFragmentRegister"
                            style="@style/D_OrphanTextView.Label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tutor" />

                    </RadioGroup>

                    <Button
                        android:id="@+id/buttonRegisterFragmentRegister"
                        style="@style/D_OrphanTextView.Label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_primary"
                        android:text="@string/loginNavigateToRegister"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/radioGroupUserTypeFragmentRegister" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>